Updated to be for me
Named my role to replace Cult of Convienince

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <style type="text/css">code{white-space: pre;}</style>
 </head>
 <body>
-<h1 id="dude">Dude</h1>
-<h2 id="master-of-the-cult-of-convienince">Master of the Cult of Convienince</h2>
+<h1 id="Dwight Ivany">Dwight Ivany</h1>
+<h2 id="Producer-Engineer-Songwriter known as Lost Dog">Producer-Engineer-Songwriter known as Lost Dog</h2>
+<h2 id="Director of Development Systems at Jostle">Director of Development Systems at Jostle</h2>
+
 <p>©2019 Ivany, Enright</p>
 </body>
 </html>
