Second commit on html

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 <h2 id="Producer-Engineer-Songwriter known as Lost Dog">Producer-Engineer-Songwriter known as Lost Dog</h2>
 <h2 id="Director of Development Systems at Jostle">Director of Development Systems at Jostle</h2>
 
-<p>©2019 Ivany, Enright</p>
+<p>©2021 Ivany</p>
 </body>
 </html>
